--- a/frontend/src/Components/Checkout/Checkout.css
+++ b/frontend/src/Components/Checkout/Checkout.css
@@ -64,7 +64,7 @@
   
   .checkout-form button {
     padding: 10px;
-    background: #fde1ff;
+    background: rgb(255, 213, 0);
     color: black;
     border: none;
     border-radius: 5px;
