--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -1,7 +1,11 @@
 .hero{
     height: 100vh;  
-    background: linear-gradient(180deg, #fde1ff, #e1ffea22 60%);
     display: flex;
+}
+
+.hero-icons {
+    width: 2rem;
+    height: 2rem;
 }
 
 .hero-left{
@@ -14,27 +18,14 @@
     line-height: 1.1;
 }
 
-.hero-left h2{
-    color: #090909;
-    font-size: 26px;
-    font-weight: 600;
-}
 
-.hero-left p{
+.hero-left h1{
     color: #171717;
     font-size: 100px;
     font-weight: 700;
 }
 
-.hero-hand-icon{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
 
-.hero-hand-icon img{
-    width: 105px;
-}
 .hero-discovery-btn {
     display: flex;
     justify-content: center;
@@ -43,14 +34,15 @@
     width: 310px;
     height: 70px;
     border-radius: 75px;
-    margin-top: 30px;
-    background: #ff4141;
-    color: white;
+    background: rgb(121, 178, 52);;
     font-size: 22px;
     font-weight: 500;
     cursor: pointer;
 }
 
+.hero-discovery-btn *{
+    color: white;
+}
 
 .hero-right{
     flex: 1;
@@ -70,9 +62,6 @@
     }
     .hero-left p{
         font-size: 60px;
-    }
-    .hero-hand-icon img{
-        width: 85px;
     }
     .hero-latest-btn {
         gap: 10px;
@@ -96,9 +85,6 @@
     .hero-left p{
         font-size: 50px;
     }
-    .hero-hand-icon img{
-        width: 65px;
-    }
     .hero-latest-btn {
         width: 220px;
         height: 50px;
@@ -117,9 +103,6 @@
     }
     .hero-left p{
         font-size: 40px;
-    }
-    .hero-hand-icon img{
-        width: 50px;
     }
     .hero-latest-btn {
         width: 175px;
@@ -143,9 +126,6 @@
     }
     .hero-left p{
         font-size: 50px;
-    }
-    .hero-hand-icon img{
-        width: 55px;
     }
     .hero-latest-btn{
         width:200px;
