--- a/frontend/src/Components/DescriptionBox/DescriptionBox.css
+++ b/frontend/src/Components/DescriptionBox/DescriptionBox.css
@@ -7,6 +7,7 @@
 }
 
 .descriptionbox-nav-box{
+    background: white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,6 +24,7 @@
 }
 
 .descriptionbox-description{
+    background: white;
     display: flex;
     flex-direction: column;
     gap: 25px;
