--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -1,30 +1,43 @@
 .footer{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 50px;
-    width: 100%;
-}
-
-.footer-logo{
-    display: flex;
-    align-items: center;
+    background: rgb(166, 166, 166);
     gap: 20px;
+    margin-top: 100px;
 }
 
-.footer-logo{
-    color: #383838;
-    font-size: 46px;
-    font-weight: 700;
+.footer-icons {
+    width: 2rem;
+    height: 2rem;
+}
+
+.footer-logo b{
+    font-family: 'Cherry Cream Soda';
+    font-size: 4rem;
+    color: rgb(174, 222, 0);
+    border-radius: 20px;
+}
+
+.footer-logo b span{
+    color: white;
+}
+
+.footer-references {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.footer-references * {
+    color: rgb(98, 98, 98);
 }
 
 .footer-links{
     display: flex;
     list-style: none;
     gap: 50px;
-    color: #252525;
-    font-size: 20px;
+    color: white;
 }
 
 .footer-links li{
@@ -33,34 +46,22 @@
 
 .footer-social-icon{
     display: flex;
-    gap: 20px;
+    justify-content: center;
+    gap: 30px;
 }
 
-.footer-icons-container{
-    padding: 10px;
-    padding-bottom: 6px;
-    background: #fbfbfb;
-    border: 1px solid rgba(243, 189, 243, 0.733);
-}
 
 .footer-copyright{
+    background: grey;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
     width: 100%;
-    margin-bottom: 30px;
-    color: #383838;
-    font-size: 20px;
+}
+.footer-copyright p {
+    color: rgb(164, 164, 164);
 }
 
-.footer-copyright hr{
-    width: 80%;
-    border: none;
-    border-radius: 10px;
-    height: 3px;
-    background: #c7c7c7;
-}
 
 @media(max-width: 800px){
     .footer{
