--- a/frontend/src/Components/Item/Item.css
+++ b/frontend/src/Components/Item/Item.css
@@ -1,31 +1,24 @@
 .item{
-    width: 280px;
+    width: 200px;
+    background: white;
 }
 .item img{
-    width : 280px;
-}
-.item p{
-    margin : 6px 0px;
-}
-
-.item-prices{
-    display: flex;
-    gap: 20px;
-
+    aspect-ratio: 1/1;
+    width : 100%;
+    overflow: hidden;
 }
 
-.item-price-new{
-    color : #374151;
-    font-size : 18px;
-    font-weight: 600;
+
+.product-buybutton {
+    width: 100%;
+    border: none;
+    background: rgb(147, 205, 76);
+    color: white;
+    height: 1.5rem;
+    bottom: 0;
 }
 
-.item-price-old{
-    color : #6b7280;
-    font-size : 18px;
-    font-weight: 500;
-    text-decoration: line-through;
-}
+
 
 .item:hover{
     transform: scale(1.05);
@@ -33,7 +26,7 @@
 }
 
 
-@media(max-width: 1280px){
+/* @media(max-width: 1280px){
     .item{
         width: 220px;
         font-size: 14px;
@@ -77,4 +70,4 @@
     .item img{
         width : 160px;
     }
-}
+} */
