--- a/frontend/src/Components/NewsLetter/NewsLetter.css
+++ b/frontend/src/Components/NewsLetter/NewsLetter.css
@@ -8,8 +8,9 @@
     margin: auto;
     padding: 0px 140px;
     margin-bottom: 150px;
-    background: linear-gradient(180deg, #FFFFFF 0%, #de8ae062 60%);
+    background: linear-gradient(to top,#a2a2a2 0%,#FFFFFF 60%, #FFFFFF 80%,  rgb(159, 221, 83) 100%);
     gap: 30px;
+    border-radius: 40px;
 }
 
 .newsletter h1{
@@ -30,8 +31,7 @@
     background: white;
     width: 730px;
     height: 70px;
-    border-radius: 80px;
-    border: 1px solid #e3e3e3;
+    border-radius: 25px;
 }
 
 .newsletter input{
@@ -40,17 +40,17 @@
     border: none;
     outline: none;
     color: #616161;
-    font-family: poppins;
-    font-size: 16px;
+    font-size: 1.5rem;
 }
 
 .newsletter div button{
     width: 210px;
     height: 70px;
-    border-radius: 80px;
-    background: black;
+    border: none;
+    border-radius: 25px;
+    background: rgb(74, 74, 74);
     color: white;
-    font-size: 16px;
+    font-size: 1.5rem;
     cursor: pointer;
 }
 
