--- a/frontend/src/Pages/CSS/ShopCategory.css
+++ b/frontend/src/Pages/CSS/ShopCategory.css
@@ -1,31 +1,33 @@
-.shopcategory-banner{
+.shopcategory {
     display: flex;
-    margin: 30px auto;
-    width: 82%;
+    flex-direction: column;
+    align-items: center;
 }
+
+.shopcategory-banner{
+    width: 80vw;
+    margin: 30px;
+}
+.shopcategory-banner img{
+    width: 100%;
+}
+
 
 .shopcategory-indexSort{
     display: flex;
-    margin: 0px 170px;
+    width: 80vw;
+    margin: 10px;
     justify-content: space-between;
     align-items: center;
 }
 
-.shopcategory-sort{
-    padding: 10px 20px;
-    border-radius: 40px;
-    border: 1px solid #888;
-}
-
-.shopcategory-indexSort p span{
-    font-weight: 600;
-}
 
 .shopcategory-products{
-    margin: 20px 170px;
+    width: 80vw;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    row-gap:  80px;
+    grid-template-columns: repeat(auto-fit,minmax(200px,2fr));
+    row-gap:  20px;
+    column-gap: 5px;
 }
 
 .shopcategory-loadmore{
@@ -36,61 +38,7 @@
     width: 233px;
     height: 69px;
     border-radius: 75px;
-    background: #ededed;
+    background: #ffffff;
     font-size: 18px;
     font-weight: 500;
-}
-
-@media(max-width: 1280px){
-    .shopcategory-banner{
-        margin:20px auto;
-        width:90%;
-    }
-    .shopcategory-indexSort{
-        width: 90%;
-        margin: auto;
-    }
-    .shopcategory-sort{
-        padding: 5px 10px;
-        font-size: 12px;
-    }
-    .shopcategory-indexSort p{
-        font-size: 12px;
-    }
-    .shopcategory-products{
-        width: 90%;
-        margin: 10px auto;
-        row-gap: 40px;
-    }
-    .shopcategory-products .item{
-        margin: auto;
-    }
-    .shopcategory-loadmore{
-        margin: 100px auto;
-        width: 200px;
-        height:60px;
-        font-size: 16px;
-    }
-}
-
-@media(max-width: 800px){
-    .shopcategory-banner{
-        width: 95%;
-    }
-    .shopcategory-products{
-        width: 95%;
-    }
-    .shopcategory-loadmore{
-        margin: 60px auto;
-        width:150px;
-        height:40px;
-        font-size: 13px;
-    }
-}
-
-@media(max-width: 500px){
-    .shopcategory-products{
-        grid-template-columns: 1fr 1fr;
-        
-    }
 }
