--- a/frontend/src/Pages/CSS/SearchResults.css
+++ b/frontend/src/Pages/CSS/SearchResults.css
@@ -28,14 +28,14 @@
 .searchresults-products {
   margin: 20px 170px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   row-gap: 80px;
 }
 
 /* Giá sản phẩm */
 .item-prices {
   display: flex;
-  gap: 20px; /* Khoảng cách giữa giá mới và cũ */
+  gap: 20px;
 }
 
 .item-price-new {
