--- a/frontend/src/Admin/Components/ProductForm/ProductForm.css
+++ b/frontend/src/Admin/Components/ProductForm/ProductForm.css
@@ -47,13 +47,15 @@
   width: clamp(100px,30%, 300px);
   height: clamp(100px,80%, 30vw);
   padding: 2%;
-  background: rgb(255, 255, 255);
+  background: rgb(243, 243, 243);
   border-radius: 20px;
   border: none;
 }
 .product-form #section-image img {
   width: 90%;
   height: 70%;
+  object-fit: contain;
+  background-color: black;
 }
 
 .product-form #section-image #upload-image {
@@ -62,13 +64,19 @@
   margin: 10px;
   border-radius: 5px;
   border: none;
-  background: rgb(49, 160, 27);
+  background: hsl(110, 71%, 40%);
   font-size: clamp(0.5rem, 50%, 1rem);
   color: white;
   cursor: pointer;
 }
 .product-form #section-image #upload-image *{
   color: white;
+}
+.product-form #section-image #upload-image:hover {
+  background: hsl(110, 71%, 35%);
+}
+.product-form #section-image #upload-image:active {
+  background: hsl(110, 71%, 30%);
 }
 
 .product-form #section-data {
@@ -86,6 +94,7 @@
   margin-bottom: 1%;
   padding-left: 3%;
   vertical-align: center;
+  background: rgb(243, 243, 243);
 }
 
 #ProductForm-cancel {
@@ -100,7 +109,7 @@
   color: white;
   font-size: 1rem;
   font-weight: bold;
-
+  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -109,18 +118,53 @@
 #ProductForm-cancel * {
   color: white;
 }
+#ProductForm-cancel:hover {
+  background: rgb(154, 0, 0);
+}
+#ProductForm-cancel:active {
+  background: rgb(134, 0, 0);
+}
 
-#ProductForm-submit {
+button[type="submit"] {
   position: absolute;
   left: 50%;
   transform: translate(-50%);
   bottom: 5%;
-  width: 12rem;
-  height: 3rem;
+  width: 20%;
+  height: 8%;
   font-size: 1rem;
   font-weight: bold;
   border-radius: 10px;
   border: none;
-  background: rgb(255, 186, 58);
   cursor: pointer;
+}
+.btn-add {
+  background: hsl(110, 69%, 40%);
+  color: white;
+}
+.btn-add:hover {
+  background: hsl(110, 69%, 35%);
+}
+.btn-add:active {
+  background: hsl(110, 69%, 30%);
+}
+.btn-edit {
+  background: hsl(219, 100%, 40%);
+  color: white;
+}
+.btn-edit:hover {
+  background: hsl(219, 100%, 35%);
+}
+.btn-edit:active {
+  background: hsl(219, 100%, 30%);
+}
+.btn-delete {
+  background: hsl(0, 100%, 40%);
+  color: white;
+}
+.btn-delete:hover {
+  background: hsl(0, 100%, 35%);
+}
+.btn-delete:active {
+  background: hsl(0, 100%, 30%);
 }
