Minor fix to product form css amd api fetch

--- a/frontend/src/Admin/Components/ProductForm/ProductForm.css
+++ b/frontend/src/Admin/Components/ProductForm/ProductForm.css
@@ -125,7 +125,7 @@
   background: rgb(134, 0, 0);
 }
 
-button[type="submit"] {
+#productForm-submit {
   position: absolute;
   left: 50%;
   transform: translate(-50%);
