--- a/frontend/src/Pages/CSS/LoginSignup.css
+++ b/frontend/src/Pages/CSS/LoginSignup.css
@@ -158,6 +158,47 @@
 .back-btn:hover {
   background: #e8e8e8;
 }
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.popup {
+  background: white;
+  padding: 30px;
+  border-radius: 12px;
+  width: 350px;
+  text-align: center;
+}
+
+.popup input {
+  display: block;
+  width: 100%;
+  margin: 8px 0;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+}
+
+.popup button {
+  background: rgb(121, 178, 52);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.popup button:hover {
+  background: rgb(63, 108, 7);
+}
 
 
 @media(max-width: 800px) {
