--- a/frontend/src/Components/CartItem/CartItem.css
+++ b/frontend/src/Components/CartItem/CartItem.css
@@ -1,8 +1,32 @@
 
 .CartItem-img {
-    height: 120px;
+    height: 100%;
+    max-height: 200px;
 }
-.CartItem-img img {
+
+.CartItem-img img{
+    height: 100%;
     object-fit: contain;
-    height: 100%
+}
+
+.CartItem-quantity button {
+    width: 2.5rem;
+    height: 2rem;
+    margin: 20px;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.CartItem-remove button {
+    width: 4rem;
+    height: 2.5rem;
+    margin: 10px;
+    background: rgb(211, 0, 0);
+    border-radius: 5px;
+    border: none;
+    font-size: 1rem;
+    cursor: pointer;
+}
+.CartItem-remove button * {
+    color: white;
 }
