--- a/frontend/src/Pages/CSS/Cart.css
+++ b/frontend/src/Pages/CSS/Cart.css
@@ -1,196 +1,213 @@
-.cartitems{
-    margin: 100px 170px;
-    /* background: white; */
+.Cart-container {
+  margin: 100px 170px;
+  /* background: white; */
 }
 
-.cartitems hr{
-    height: 3px;
-    background: #e2e2e2;
-    border: 0;
-}
 
-.cartitems-cart {
+.Cart-cart #table {
   background: white;
-  padding: 10px;
+  border-radius: 30px;
+  width: 100%;
+  font-size: 1.1rem;
+  overflow: hidden;
 }
 
-.cartitems-format-main{
-    display: grid;
-    grid-template-columns: 0.5fr 2fr 1fr 1fr 1fr 1fr;
-    align-items: center;
-    gap: 75px;
-    padding: 20px 0px;
-    color: #454545;
-    font-size: 18px;
-    font-weight: 600;
+.Cart-cart #table td:last-child {
+  border-right: none;
 }
 
-.cartitems-format{
-    font-size: 17px;
-    font-weight: 500px;
+.Cart-cart #table th:last-child {
+  border-right: none;
 }
 
-.carticon-product-icon{
-    height: 120px;
+.Cart-cart #table tr:last-child td {
+  border-bottom: none;
 }
 
-.caritems-remove-icon{
-    width: 15px;
-    margin: 0px 40px;
-    cursor: pointer; 
+.Cart-cart #table th {
+  height: 3rem;
+  border-right: 1px solid lightgrey;
+  border-bottom: 1px solid lightgrey;
+  background: lightgrey;
 }
 
-.cartitems-quantity{
-    width: 64px;
-    height: 50px;
-    border: 2px solid #ebebeb;
-    border-radius: 10px;
-    background: white;
+.Cart-cart #table td {
+  height: 6rem;
+  border-bottom: 1px solid lightgrey;
+  border-right: 1px solid lightgrey;
+  text-align: center;
 }
 
-.cartitems-checkout{
-    display: flex;
-    margin: 100px 0px;
+
+.Cart-cart #table #index-col{
+  width: 40px;
+  background: lightgrey;
 }
 
-.cartitems-total{
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    margin-right: 200px;
-    gap: 40px;
+.Cart-cart #table .index-bar-cell {
+  background: rgb(240, 240, 240);
+  border-right: 1px solid lightgrey;
 }
 
-.cartitems-total-item{
-    display: flex;
-    justify-content: space-between;
-    padding:15px 0px;
+
+.Cart-cart #table #image-col {
+  width: 15%;
 }
 
-.cartitems-total button{
-    width: 262px;
-    height: 58px;
-    outline: none;
-    border: none;
-    background: #ff5a5a;
-    color: white;
-    font-size: 16px;
-    font-weight: 600;
-    cursor: pointer;
-}
-.cartitems-total button:hover{
-    background: #e04e4e;
+.Cart-cart #table #quantity-col {
+  width: 15%;
 }
 
-.cartitems-promocode{
-    flex: 1;
-    font-size: 16px;
-    font-weight: 500;
+.Cart-cart #table #remove-col {
+  width: 10%;
 }
 
-.cartitems-promocode p{
-    color: #555;
+
+/* BELOW UNTOUCHED */
+
+.cartitems-checkout {
+  display: flex;
+  margin: 100px 0px;
 }
 
-.cartitems-promobox{
-    width: 504px;
-    margin-top: 15px;
-    padding-left: 20px;
-    height: 58px;
-    background: #ffffff;
+
+.cartitems-total {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  margin-right: 200px;
+  gap: 40px;
 }
 
-.cartitems-promobox input{
-    border: none;
-    outline: none;
-    background: transparent;
-    font-size: 16px;
-    width: 330px;
-    height: 50px;
+.cartitems-total-item {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 0px;
 }
 
-.cartitems-promobox button{
-    width: 170px;
-    height: 58px;
-    font-size: 16px;
-    background: black;
-    color: white;
-    cursor: pointer;
+.cartitems-total button {
+  width: 262px;
+  height: 58px;
+  outline: none;
+  border: none;
+  background: #ff5a5a;
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+}
+.cartitems-total button:hover {
+  background: #e04e4e;
 }
 
-.cartitems-promobox button:hover{
-    background: #333;
+.cartitems-promocode {
+  flex: 1;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.cartitems-promocode p {
+  color: #555;
+}
+
+.cartitems-promobox {
+  width: 504px;
+  margin-top: 15px;
+  padding-left: 20px;
+  height: 58px;
+  background: #ffffff;
+}
+
+.cartitems-promobox input {
+  border: none;
+  outline: none;
+  background: transparent;
+  font-size: 16px;
+  width: 330px;
+  height: 50px;
+}
+
+.cartitems-promobox button {
+  width: 170px;
+  height: 58px;
+  font-size: 16px;
+  background: black;
+  color: white;
+  cursor: pointer;
+}
+
+.cartitems-promobox button:hover {
+  background: #333;
 }
 
 .cartitems-quantity-control {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
-  
-  .cartitems-quantity-control button {
-    width: 28px;
-    height: 28px;
-    border: none;
-    background: #ddd;
-    cursor: pointer;
-    font-size: 18px;
-    border-radius: 4px;
-  }
-  
-  .cartitems-quantity-control span {
-    min-width: 20px;
-    text-align: center;
-  }
-  
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
 
-  .applied-promo {
-    margin: 10px 0;
-    padding: 10px;
-    background-color: #f8f8f8;
-    border-radius: 5px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .applied-promo button {
-    background: #ff5a5a;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .promo-error {
-    color: #ff5a5a;
-    margin-top: 5px;
-    font-size: 14px;
-  }
-  
-  .available-promos {
-    margin-top: 20px;
-    padding: 10px;
-    background-color: #f8f8f8;
-    border-radius: 5px;
-  }
-  
-  .available-promos ul {
-    list-style-type: none;
-    padding-left: 10px;
-    margin-top: 5px;
-  }
-  
-  .available-promos li {
-    margin: 5px 0;
-    font-size: 14px;
-  }
-  .free-shipping-badge {
-    font-size: 12px;
-    color: green;
-    background-color: #e6f7e6;
-    padding: 2px 6px;
-    border-radius: 3px;
-    margin-left: 8px;
-  }
+.cartitems-quantity-control button {
+  width: 28px;
+  height: 28px;
+  border: none;
+  background: #ddd;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 4px;
+}
+
+.cartitems-quantity-control span {
+  min-width: 20px;
+  text-align: center;
+}
+
+.applied-promo {
+  margin: 10px 0;
+  padding: 10px;
+  background-color: #f8f8f8;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.applied-promo button {
+  background: #ff5a5a;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.promo-error {
+  color: #ff5a5a;
+  margin-top: 5px;
+  font-size: 14px;
+}
+
+.available-promos {
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #f8f8f8;
+  border-radius: 5px;
+}
+
+.available-promos ul {
+  list-style-type: none;
+  padding-left: 10px;
+  margin-top: 5px;
+}
+
+.available-promos li {
+  margin: 5px 0;
+  font-size: 14px;
+}
+.free-shipping-badge {
+  font-size: 12px;
+  color: green;
+  background-color: #e6f7e6;
+  padding: 2px 6px;
+  border-radius: 3px;
+  margin-left: 8px;
+}
